(fix) spacing

--- a/assets/scss/partials/_navigation.scss
+++ b/assets/scss/partials/_navigation.scss
@@ -204,7 +204,7 @@
                 background: var(--color-background);
                 row-gap: $spacing-24;
                 z-index: 1;
-                padding: $spacing-16;
+                padding: $spacing-16 $spacing-16 $spacing-24;
 
                 r-cell {
                     transform: translate(-#{$spacing-8}, 0);
